[project]
name = "fire-py"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jim Lundin", email = "jimeriklundin@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.11.2",
]

[tool.ruff.lint]
select = ["ALL"]

[tool.mypy]
strict = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fire_py"]
